...
    }

    var body: some View {

        VStack(alignment: .leading) {

            Text("Overall Profile")
                .font(.largeTitle)
                .bold()

            VStack(spacing: 24) {

                Text(rank.title)
...
